config.toml: changed

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "http://ponciano.dev"
-title = "johndoe"
+title = "diegoponciano"
 theme = "hugo-coder"
 languagecode = "en"
 defaultcontentlanguage = "en"
